feat: get catalog fields
